# storage/api-docs/api-docs.json
@@ -1,10 +1,24 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "Food App API",
-        "description": "",
-        "version": "3.0.0"
+        "title": "나만의 공유노트 API",
+        "description": "This is a sample server Petstore server.  You can find out more about Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).  For this sample, you can use the api key `special-key` to test the authorization filters.",
+        "termsOfService": "http://swagger.io/terms/",
+        "contact": {
+            "email": "rzip84@gmail.com"
+        },
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        },
+        "version": "1.0.0"
     },
+    "servers": [
+        {
+            "url": "https://api-bookmark.meteopark.dev/api/documentation",
+            "description": "RestApis Host"
+        }
+    ],
     "paths": {
         "/api/v1/bookmark": {
             "get": {
@@ -25,6 +39,35 @@
                     }
                 }
             }
+        },
+        "/api/v1/users": {
+            "post": {
+                "tags": [
+                    "user"
+                ],
+                "summary": "유저생성",
+                "description": "유저생성",
+                "operationId": "createUser",
+                "parameters": [
+                    {
+                        "name": "password",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "default": {
+                        "description": "successful operation"
+                    }
+                }
+            }
         }
+    },
+    "externalDocs": {
+        "description": "Find out more about Swagger",
+        "url": "http://swagger.io"
     }
 }
